@@ -3,6 +3,11 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+2008/02/17
+	* corrected login_fd/char_fd being uninitialized in the char servers.
+	* Added a check to prevent using consume-delay items when you cannot use
+	  skills, since that opens an exploit if the item also has non-skill-casting
+	  components to its script. [Skotlex]
 2008/02/14
 	* Removed/replaced all calls to map_getallusers (followup to r12195)
 	* Trashed @whozeny (from r269) [ultramage]
